DS9 check routine optimized